--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <h1>Ingrese un Numero del 1 al 6</h1>
         </div>
         <div class="formulario">
-            <input type="number" id="numberFilter">
+            <input type="number" id="numberFilter" min="0" max="10">
             <button id="boton">Buscar</button>
         </div>
         <div class="text-container">
@@ -26,6 +26,9 @@
         </div>
     </div>
 
+    <footer>
+        <h4>© Designed by <a href="https://github.com/fafomax">@fafomax</a> and <a href="https://github.com/LeanCres">@LeanCres</a></h4>
+    </footer>
     <script src="./apps/app.js"></script>
 </body>
 
